fixed cleaning chat